# HolyCluster

./: .autoenv_leave.zsh  .env.example  .gitignore  .mailmap  FIELD_DAY_SETUP.md  TIME_REPLAY_CHANGES.md  docker-compose.yml  pyproject.toml  setup.sh  start.bat
.github/workflows/: backend.yml  catserver.yml  deploy.yml  ui.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile.api  Dockerfile.app-test  Dockerfile.telnet_collectors  Dockerfile.web_collectors  alembic.ini  deploy.sh  docker-compose.override.yml  docker-compose.yml  pyproject.toml  requirements.api.txt  settings.py  setup.sh  spots_server.py
backend/api/: __main__.py  main.py  pyproject.toml  requirements.api.txt  settings.py  settings2.py
backend/api/src/api/: main.py  profiling.py  propagation.py  settings.py  submit_spot.py  voacap.py
backend/api/tests/: test_hunter_resolve.py  test_propagation.py  test_propagation_history.py  test_propagation_persistence.py  test_voacap.py  test_websocket_protocol.py
backend/app-test/: main.py
backend/collector/: Dockerfile
backend/collectors/: Dockerfile  entrypoint.sh  pyproject.toml  run_telnet_scripts.sh
backend/collectors/src/: misc.py  run_collector.py  run_telnet_scripts.sh  settings.py
backend/collectors/src/collectors/: collector.py  logging_setup.py  main.py  misc.py  pota.py  settings.py  sota.py  utils.py  wwff.py
backend/collectors/src/collectors/db/: add_enriched_telnet_spots_to_postgres.py  check_postgres.py  cleanup_postgres_tables.py  valkey_config.py
backend/collectors/src/collectors/enrichers/: bands.csv  dxpeditions.py  enrich_telnet_spots.py  frequencies.py  geo.py  modes.json  qrz.py
backend/collectors/src/collectors/telnet/: client.py  runner.py  telnet_servers.csv
backend/collectors/src/collectors/telnet_collectors/: run_telnet_collectors.py  telnet_collectors.py
backend/collectors/src/collectors/web_collectors/: dxheat_collector.py
backend/collectors/src/db/: add_enriched_telnet_spots_to_postgres.py  add_enriched_telnet_spots_to_postres.py  check_postgres.py  cleanup_database.py  cleanup_database.sh  cleanup_postgres_tables.sh  init_pg.py  initiliaze_database.py  postgres_classes.py  postgres_classes2.py  valkey_config.py
backend/collectors/src/enricher/: enrich_spots.py
backend/collectors/src/enrichers/: bands.csv  coordinates.py  enrich_telnet_spots.py  frequencies.py  geo.py  locator.py  modes.json  qrz.py
backend/collectors/src/telnet_collectors/: run_telnet_collectors.py  telnet_collectors.py
backend/collectors/src/web_collectors/: dxheat_collector.py  requirements.web_collectors.txt
backend/collectors/telnet_collectors/: telnet_collector.py  telnet_servers.csv
backend/collectors/tests/: test_pota.py  test_sota.py  test_wwff.py
backend/collectors/tests/collector/: test_get_geo_cache_from_db.py
backend/collectors/tests/enricher/: test_load_bands_from_csv.py
backend/collectors/tests/enrichers/: test_find_band.py  test_find_band_and_mode.py  test_find_geo_details.py  test_get_geo_details.py  test_load_bands_from_csv.py  test_load_bands_from_file.py  test_load_modes_from_file.py
backend/collectors/tests/queues/: producer1.py
backend/db/: pyproject.toml
backend/db/src/db/: __init__.py
backend/docker/: Dockerfile.api  Dockerfile.collector  Dockerfile.migrate  Dockerfile.monitor  Dockerfile.telnet_collectors
backend/infra/: docker-compose.yml
backend/infra/certbot/conf/: options-ssl-nginx.conf
backend/infra/nginx/: Dockerfile.nginx  nginx.conf.template
backend/infra/postgres/: Dockerfile.postgres
backend/infra/valkey/: Dockerfile.valkey
backend/migrations/: env.py
backend/migrations/versions/: 68a8d1bc052f_baseline.py  a9b8c7d6e5f4_add_propagation_measurements.py  b1c2d3e4f5a6_add_spot_zone_columns.py  d7e8f9a0b1c2_add_sota_points.py  e8f0a1b2c3d4_replace_country_columns_with_dxcc_codes.py  f489c957a156_add_inecies_to_holyspot_and_progagation.py  facd530575f1_add_pota_spot_fields.py
backend/monitor/: pyproject.toml
backend/monitor/src/monitor/: main.py  settings.py  state.py
backend/monitor/src/monitor/alerting/: base.py  telegram.py
backend/monitor/src/monitor/checks/: containers.py  metrics.py  spot_flow.py
backend/postgres/: Dockerfile
backend/shared/: pyproject.toml
backend/shared/src/shared/: coordinates.py  cty.py  db.py  ensure_db.py  geo.py  locator.py  metrics.py  prefixes_list.csv  qrz.py  settings.py  trace_memory.py
backend/src/: cleanup_database.py  cleanup_database.sh  prefixes_list.csv  run_collector.sh  run_telnet_collector.py  run_telnet_collectors.py  settings.py  spots_collector.py  telnet_collector.py  telnet_servers.csv  valkey_config.py
backend/src/api/: __main__.py  propagation.py
backend/src/collector_telnet/: run_telnet_collectors.py  telnet_collector.py
backend/tests/: compare_spots.py  stress_test_websockets.py
backend/tests/queues/: consumer1.py  consumer2.py  producer2.py
backend/tests/telnet/: test_read_clusters_csv.py  test_telnet_connection.py
catserver/: Cargo.toml  Dockerfile  build.rs  build_msi.sh  publish.sh
catserver/.cargo/: config.toml
catserver/scripts/: normalize_msi.py  normalize_pe.py  verify_determinism.sh
catserver/src/: dummy.rs  freq.rs  main.rs  omnirig.rs  reporting.rs  rig.rs  rigctld.rs  server.rs  tray_icon.rs  utils.rs
catserver/wix/: CustomInstallDirDlg.wxs  eula.rtf  main.wxs
config/: paths.env
docs/: build.sh  fix_missing_spot.md  manual.md
nginx/: Dockerfile.nginx  nginx.conf.template
postgres/: Dockerfile.postgres
shared/: band_plans.json
src/: ClientSideServer.py  RadioController.py
ui/: biome.json  package-lock.json  package.json  stats.html  tailwind.config.js  vite.config.js
ui/scripts/: cty_entities.js  fix_geojson.py  simplify_geojson.py
ui/src/: filters_data.js  flags.js  main.jsx  utils.js
ui/tests/: compare_version.js  cty_entities.js  dxcc_entities.js  dxcc_labels.js  hunter_adif.js  hunter_panel.jsx  maidenhead_grid.js  map_utils.js  overlay_highlights.js  profile_data.js  profiles_provider.jsx  propagation_history.js  (+3 more)
valkey/: valkey.conf
(+156 files in other folders)
