[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    # Common
    "aiohttp>=3.13.2",
    "environs>=14.5.0",
    "asyncpg>=0.31.0",
    "redis>=7.1.0",
    # api
    "fastapi>=0.122.0",
    # TODO: This is needed only by the api, which should by migrated to asyncpg
    "psycopg2>=2.9.11",
    "sqlmodel>=0.0.27",
    "uvicorn[standard]>=0.38.0",
    # collectors
    "httpx>=0.28.1",
    # TODO: This is needed only by the collectors, which should by migrated to sqlmodel
    "sqlalchemy>=2.0.44",
    "loguru>=0.7.3",
    "asyncio>=4.0.0",
    "greenlet>=3.2.4",
    "psutil>=7.1.3",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipython>=9.7.0",
]

[tool.uv.workspace]
members = [
    "api",
    "collectors",
    "test",
]
