[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "api",
    "collectors",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipython>=9.7.0",
]

[tool.uv.sources]
api = { workspace = true }
collectors = { workspace = true }
db = { workspace = true }
shared = { workspace = true }

[tool.uv.workspace]
members = [
    "api",
    "collectors",
    "db",
    "shared",
]

[tool.ruff]
line-length = 120
