[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "api",
    "collectors",
    "monitor",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipython>=9.7.0",
    "ruff>=0.9.2",
]

[tool.uv.sources]
api = { workspace = true }
collectors = { workspace = true }
monitor = { workspace = true }
shared = { workspace = true }

[tool.uv.workspace]
members = [
    "api",
    "collectors",
    "monitor",
    "shared",
]

[tool.ruff]
line-length = 120
