[package]
name = "catserver"
authors = ["HolyCluster dev team"]
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true
lto = true
codegen-units = 1

[dependencies]
anyhow = "1.0.98"
argh = "0.1.13"
axum = { version = "0.8.3", features = ["ws"] }
directories = "6.0.0"
futures-util = "0.3.31"
open = "5.3.2"
reqwest = { version = "0.12.15", features = ["blocking", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
single-instance = "0.3.3"
tokio = { version = "1.44.2", features = ["rt", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
tower-http = { version = "0.6.2", features = ["fs"] }
tracing = "0.1.41"
tracing-panic = "0.1.2"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tray-icon = { version = "0.20.1", default-features = false }
winit = "0.30.10"
winsafe = { version = "0.0.25", features = ["kernel", "ole", "oleaut"] }

[build-dependencies]
winresource = "0.1.20"

[features]
dev_server = []
