[project]
name = "api"
version = "0.1.0"
description = "Holy cluster API server"
dependencies = [
    "aiohttp>=3.13.2",
    "environs>=14.5.0",
    "asyncpg>=0.31.0",
    "redis>=7.1.0",

    "fastapi>=0.122.0",
    "sqlmodel>=0.0.27",
    "uvicorn[standard]>=0.38.0",
    "db",
]

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"
