[project]
name = "collectors"
version = "0.1.0"
description = "Collectors that provides the spot information from clusters"
dependencies = []

[project.scripts]
check_postgres = "collectors.db.check_postgres:main"
run_telnet_collectors = "collectors.telnet_collectors.run_telnet_collectors:run_concurrent_telnet_connections"
enrich_telnet_spots = "collectors.enrichers.enrich_telnet_spots:main"
add_spots_to_db = "collectors.db.add_enriched_telnet_spots_to_postgres:main"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"
