[project]
name = "collectors"
version = "0.1.0"
description = "Collectors that provides the spot information from clusters"
dependencies = [
    "aiohttp>=3.13.2",
    "environs>=14.5.0",
    "asyncpg>=0.31.0",
    "redis>=7.1.0",

    "httpx>=0.28.1",
    "sqlalchemy>=2.0.44",
    "loguru>=0.7.3",
    "asyncio>=4.0.0",
    "greenlet>=3.2.4",
    "psutil>=7.1.3",
    "db",
    "shared",
]

[project.scripts]
check_postgres = "collectors.db.check_postgres:main"
collector = "collectors.collector:main"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"
