[project]
name = "monitor"
version = "0.1.0"
description = "Health monitoring and alerting for HolyCluster backend"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic-settings>=2.7.1",
    "redis>=7.1.0",
    "shared",
    "websockets>=14.0",
]

[project.scripts]
monitor = "monitor.main:main"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"
